awx/awx-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: awx
  namespace: awx
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`awx.somehostname.local`) || Host(`10.9.254.108`)
      kind: Rule
      services:
        - name: awx-service
          port: 80
          scheme: http
  tls:
    certResolver: le
